--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
             <small>Scroll down to explore more about</small>
         </div>
         <div class="half-width">
-            <img src="/photos/picture.png" alt="">
+            <img src="photos/picture.png" alt="">
 
         </div>
-
 
     </section>
 
@@ -42,7 +41,7 @@
 
         <div class="mission-passion">
             <div id="mission" class="box-item">
-                <img src="/photos/illustrator-1.png" alt="">
+                <img src="photos/illustrator-1.png" alt="">
                 <h4>Mission</h4>
                 <p>The best first step to becoming a Web Developer is to start learning web development fundamentals,
                     including an understanding of HTML (Hypertext Markup Language), CSS (Cascading Style Sheets), and
@@ -52,7 +51,7 @@
 
             </div>
             <div id="vision" class="box-item">
-                <img src="/photos/illustrator-2.png" alt="">
+                <img src="photos/illustrator-2.png" alt="">
                 <h4>Vision</h4>
                 <p>My Vision is learn more and more.In future I will catch the highest level as a developer.My vision is
                     very simple in this time.I can end my programming hero course with 1110% dedication with the grace
@@ -62,7 +61,7 @@
             </div>
             <div id="goal" class="box-item">
 
-                <img src="/photos/illustrator-3.png" alt="">
+                <img src="photos/illustrator-3.png" alt="">
                 <h4>Goals</h4>
                 <p>The main objective when working as a developer is to be productive and deliver value to the company.
                     As a developer or a CTO, the aim is to build practical applications that will be 100% successful. To
@@ -77,7 +76,7 @@
     </section>
     <section class="top-part develop-banner">
         <div class=" half-width">
-            <img src="/photos/coding.png" alt="">
+            <img src="photos/coding.png" alt="">
 
         </div>
         <div class="half-width">
@@ -104,7 +103,7 @@
             <a class="btn" target="_blank" href="https://mail.google.com/mail/u/0/">Read The Documentation</a>
         </div>
         <div class="half-width">
-            <img class="profile-img" src="/photos/project.png" alt="">
+            <img class="profile-img" src="photos/project.png" alt="">
         </div>
     </section>
     <section>
@@ -112,7 +111,7 @@
 
         <div class="mission-passion">
             <div id="travel" class="box-item">
-                <img src="/photos/trr1.png" alt="">
+                <img src="photos/trr1.png" alt="">
                 <h4>Travelling</h4>
                 <p>I am a pure traveller.I have traveled in all over of <a href="">Bangladesh</a>.Bandarban is my
                     favourite place in BD.Clouds and green beauty always boost-up me.Natural beauty always my first
@@ -121,7 +120,7 @@
 
             </div>
             <div id="playing" class="box-item">
-                <img src="/photos/play11.png" alt="">
+                <img src="photos/play11.png" alt="">
                 <h4>Playing</h4>
                 <p>I am e job holder.But when I go in my home then I love to play cricket,football,badminton.In my
                     childhood I am always a daredevil types boy.In every moment when I got time I would like to go in
@@ -130,7 +129,7 @@
             </div>
             <div id="watching" class="box-item">
 
-                <img src="/photos/barca.png" alt="">
+                <img src="photos/barca.png" alt="">
                 <h4>Wathing TV</h4>
                 <p>In my free time I love to watch TV.Specially sports channel.I love to watch club football. <a
                         href="https://www.fcbarcelona.com/en/">FC Brcelona</a> is my favourite football club.I was
